# email-newsletter

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
