[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.15.19"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = {  version = "1.19.0", features = ["v4"] }
log = "0.4.29"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13.1"
