[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = {  version = "1.19.0", features = ["v4"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = {version = "0.10.3", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.21.3"
reqwest = "0.13.1"
